Improve footer's styles

--- a/apps/havana500-webclient/src/app/features/layout/footer/footer.component.html
+++ b/apps/havana500-webclient/src/app/features/layout/footer/footer.component.html
@@ -1,18 +1,33 @@
 <footer fxLayout="column" fxLayoutAlign="center center" class="mat-ant-dark-800-bg footer-content">
-    <div id="footer-icons-container">
-        <a class="social-icon fb-icon" href="https://facebook.com">
-            <img _ngcontent-c3="" class="flag mr-8" src="assets/images/social-icons/facebook.png">
-        </a>
-        <a class="social-icon twitter-icon" href="https://twitter.com">
-            <img _ngcontent-c3="" class="flag mr-8" src="assets/images/social-icons/twitter.png">
-        </a>
-        <a class="social-icon instagram-icon" href="https://instagram.com">
-            <img _ngcontent-c3="" class="flag mr-8" src="assets/images/social-icons/instagram.png">
-        </a>
-        
+  <div id="footer-icons-container">
+    <a class="social-icon fb-icon" href="https://facebook.com">
+      <img _ngcontent-c3="" class="flag mr-8" src="assets/images/social-icons/facebook.png">
+    </a>
+    <a class="social-icon twitter-icon" href="https://twitter.com">
+      <img _ngcontent-c3="" class="flag mr-8" src="assets/images/social-icons/twitter.png">
+    </a>
+    <a class="social-icon instagram-icon" href="https://instagram.com">
+      <img _ngcontent-c3="" class="flag mr-8" src="assets/images/social-icons/instagram.png">
+    </a>
+
+  </div>
+  <div id="footer-text-container">Asamblea Provincial del Poder Popular Dirección de Comunicación Institucional Teléf.:
+    (+53) 7868 2335 <br>
+    <span class="comp-name">
+      <a href="mailto:500habanas@gmail.com?Subject=About%20Habana500%20website" target="_top">Grupo
+        Creativo PRIM!</a></span>
+    Teléf.: (+53) 5 8412973 <br>
+    <!-- <span class="comp-name"> Desarrollado por:</span> <a href="mailto:antteamco@gmail.com?Subject=About%20Habana500%20website"
+      target="_top">ANT,
+      Software and Design</a> <br> -->
+    <div id="footer-links">
+      <h5 id="links-header">Enlaces de interés</h5>
+      <ul>
+        <li><a href="">Gobierno de la Habana</a></li>
+        <li><a href="">Asamblea Municipal</a></li>
+        <li><a href="">Algo más</a></li>
+      </ul>
     </div>
-    <div id="footer-text-container">Asamblea Provincial del Poder Popular Dirección de Comunicación Institucional Teléf.: (+53) 7868 2335 <br>
-            Grupo Creativo PRIM! 500habanas@gmail.com Teléf.: (+53) 5 8412973 <br>
-            Todos los derechos reservados. <br>
-            </div>
+    <span id="rights-container"> Todos los derechos reservados.</span>
+  </div>
 </footer>
