Fix the styles of the toolbar for mobiles

--- a/apps/havana500-webclient/src/app/features/layout/layout.component.html
+++ b/apps/havana500-webclient/src/app/features/layout/layout.component.html
@@ -1,5 +1,5 @@
 <div class=" main-container" fxLayout="column">
-  <mat-toolbar id="main-toolbar" class="toolbar mat-elevation-z1 mat-accent-500-bg">
+  <mat-toolbar id="main-toolbar" class="toolbar mat-elevation-z1 mat-accent-500-bg" style="height: 55px;">
     <hav-toolbar  fxFlexFill></hav-toolbar>
   </mat-toolbar>
 
