--- a/apps/havana500-webclient/src/app/features/layout/main-menu/toolbar.component.html
+++ b/apps/havana500-webclient/src/app/features/layout/main-menu/toolbar.component.html
@@ -1,6 +1,6 @@
 <nav fxFlex fxFill fxLayout="row" fxLayoutAlign="space-between center">
   <button *ngIf="isMobile()" mat-icon-button (click)="openMobileMenu()">
-    <mat-icon>menu</mat-icon>
+    <mat-icon id="icon-menu">menu</mat-icon>
   </button>
 
   <mat-icon
