Improve style for the summary-container mobile and the metadata-panel

--- a/apps/havana500-webclient/src/app/core/scss/ant.scss
+++ b/apps/havana500-webclient/src/app/core/scss/ant.scss
@@ -2,3 +2,13 @@
 @import "variables/theme";
 // Mixins
 @import "mixins/breakpoints";
+
+.metadata-panel{
+    flex-wrap: wrap;
+}
+
+.summary-outer-container{
+    @include media-breakpoint('sm'){
+        min-width: 35%;
+    }
+}
