Improve the styles of the cards in the 2nd level
Better rendering for different screen sizes

--- a/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.html
+++ b/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.html
@@ -64,7 +64,7 @@
         !isMobile() && mostImportantArticle && articlesToRender?.length > 0
       ">
       <ant-article-summary *ngFor="let article of articlesToRender" [article]="article" [isCreationDateVisible]="false"
-        class="col-md-3 col-sm-4 col-xs-12"></ant-article-summary>
+        class="col-md-4 col-lg-3"></ant-article-summary>
     </section>
     <!-- EXTRA ARTICLES -->
 
