--- a/apps/havana500-webclient/src/app/features/gallery/gallery.component.html
+++ b/apps/havana500-webclient/src/app/features/gallery/gallery.component.html
@@ -1,14 +1,14 @@
-  <!-- HEADER -->
-  <!-- <div id="secondary-header" fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column">
+<!-- HEADER -->
+<!-- <div id="secondary-header" fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column">
     <div id="tags-outer-container" class="mat-accent-500-bg">
       <div id="section-name-container">
         <h1 class="section-name" [innerHTML]="'GALLERY' | translate"></h1>
       </div>
     </div>
   </div> -->
-  <!-- / HEADER -->
+<!-- / HEADER -->
 
-  <!-- <ngx-masonry [options]="masonryOptions" id="gallery-grid-container">
+<!-- <ngx-masonry [options]="masonryOptions" id="gallery-grid-container">
       <ngxMasonryItem class="masonry-item" *ngFor="let img of galleryImages" (click)="openGallery(i)">
         <div class="gallery-img-container">
           <img src="{{img.relativePath}}" alt="{{img.seoFileName}}" layout-fill>
@@ -16,16 +16,21 @@
       </ngxMasonryItem>
     </ngx-masonry>-->
 
-  <div id="gallery-grid-container">
-    <div class="grid-item gallery-img-container" *ngFor="let img of galleryImages"
-      (click)="openGallery(i)">
-      <img src="{{img.relativePath}}" alt="{{img.seoFileName}}" layout-fill>
-    </div>
+<div id="gallery-grid-container">
+  <div class="grid-item gallery-img-container" *ngFor="let img of galleryImages" (click)="openGallery(i)">
+    <img src="{{img.relativePath}}" alt="{{img.seoFileName}}" layout-fill>
   </div>
-  <ngx-image-gallery [images]="imageForPlugin"></ngx-image-gallery> 
+
+  <div class="grid-item gallery-img-container" *ngFor="let item of [1,2,3]">
+    <iframe onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"
+      src="https://www.youtube.com/embed/DrLRGWDYkRA" frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+</div>
+<ngx-image-gallery [images]="imageForPlugin"></ngx-image-gallery>
 
 
-  <!-- <ng-masonry-grid [masonryOptions]="{ transitionDuration: '0.8s', gutter: 5 }" [useAnimation]="true"
+<!-- <ng-masonry-grid [masonryOptions]="{ transitionDuration: '0.8s', gutter: 5 }" [useAnimation]="true"
     [scrollAnimationOptions]="{ animationEffect: 'effect-4', minDuration : 0.4, maxDuration : 0.7 }">
     <ng-masonry-grid-item id="{{'masonry-item-'+i}}" *ngFor="let img of galleryImages; let i = index;" (click)="openGallery(i)">
       <mat-card class="example-card">            
@@ -39,8 +44,8 @@
     </ng-masonry-grid-item>
   </ng-masonry-grid> -->
 
-  <div class="more-elements-btn-container" [ngClass]="{ 'hide-more-btn': isEndOfPage }">
-    <button class="btn" (click)="loadMoreImages()">
-      <span translate>SEE_MORE</span>
-    </button>
-  </div>
+<div class="more-elements-btn-container" [ngClass]="{ 'hide-more-btn': isEndOfPage }">
+  <button class="btn" (click)="loadMoreImages()">
+    <span translate>SEE_MORE</span>
+  </button>
+</div>
