Improve internal styles of the date selector

--- a/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.scss
+++ b/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.scss
@@ -145,9 +145,10 @@ $tags-container-color: #2aaae2;
 
         .ng-value {
           font-weight: 500 !important;
-          font-size: 1.1rem !important;
+          font-size: 1.2rem !important;
           text-align: center !important;
           width: 100% !important;
+          margin-top: -5px;
         }
 
       }
