--- a/libs/shared/src/lib/components/outstanding-experiences/outstanding-experiences.component.html
+++ b/libs/shared/src/lib/components/outstanding-experiences/outstanding-experiences.component.html
@@ -1,5 +1,5 @@
 <div
-  class="feature-section__padded feature-section__positioned"
+  class="feature-section__positioned"
   [ngClass]="{ 'feature-section__sized': isMobile() }"
   fxLayout="column"
 >
@@ -7,7 +7,7 @@
     <h1 translate class="section-name clickable">EXPERIENCES</h1>
   </div>
 
-  <div fxFlex="1 1 100%" fxLayout="row" fxLayoutAlign="stretch stretch">
+  <div fxFlex="1 1 100%" fxLayout="row" fxLayoutAlign="center stretch" >
     <!-- POSTER -->
     <div
       class="mat-accent-500-bg experiences-poster"
