--- a/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.html
+++ b/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.html
@@ -54,7 +54,7 @@
         secondMostImportantArticles?.length > 0
       ">
         <ant-article-summary *ngFor="let article of secondMostImportantArticles" [article]="article"
-          [isCreationDateVisible]="false" class="col-md-6 col-xs-12"></ant-article-summary>
+          [isCreationDateVisible]="false" class="col-sm-6 col-xs-12"></ant-article-summary>
       </section>
       <!-- / SECOND MOST IMPORTANT -->
     </div>
@@ -64,7 +64,7 @@
         !isMobile() && mostImportantArticle && articlesToRender?.length > 0
       ">
       <ant-article-summary *ngFor="let article of articlesToRender" [article]="article" [isCreationDateVisible]="false"
-        class="col-md-4 col-lg-3"></ant-article-summary>
+        class="col-sm-4"></ant-article-summary>
     </section>
     <!-- EXTRA ARTICLES -->
 
